[tool.poetry]
name = "nnunetv2"
version = "2.1.2"
description = "nnU-net is a framework for out of the box image segmentation"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = ">=2.0.0, !=2.0.1"
acvl-utils = ">=0.2"
dynamic-network-architectures = ">=0.2"
yacs = "^0.1.8"
tqdm = "^4.66.1"
dicom2nifti = "^2.4.8"
scipy = "^1.11.2"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
graphviz = "^0.20.1"
tifffile = "^2023.8.12"
requests = "^2.31.0"
nibabel = "^5.1.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
imagecodecs = "^2023.8.12"
tensorflow = "^2.13.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.285"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"