[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.11.0,<3.13.0"
dependencies = [
  "jupyter>=1.0.0",
  "ipykernel>=6.0.0",
  "numpy>=2.3.0",
  "nnunetv2",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu121 = [
  "torch>=2.4.0,<2.5.0",
  "torchvision>=0.19.0,<0.20.0",
]
cu124 = [
  "torch>=2.4.0,<2.5.0",
  "torchvision>=0.19.0,<0.20.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
viz = [
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
]
medical = [
  "nibabel>=3.2.0",
  "SimpleITK>=2.0.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
    { extra = "cu124" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
nnunetv2 = { workspace = true }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[tool.uv.workspace]
members = ["nnunetv2"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
